<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/gradeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/gradeText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gradeText"
        app:layout_constraintTop_toBottomOf="@+id/gradeText">

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/_2"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/RB3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/_3"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/RB4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/_4"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/RB5"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/_5"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>